--- a/functions/common/file-common/pom.xml
+++ b/functions/common/file-common/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>file-common</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>file-common</name>
-    <description>file common</description>
 
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
-        <artifactId>spring-functions-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../spring-functions-parent</relativePath>
+        <artifactId>java-functions-common-parent</artifactId>
+        <version>${revision}</version>
     </parent>
+
+    <artifactId>file-common</artifactId>
+    <name>file-common</name>
+    <description>file common</description>
 
     <dependencies>
         <dependency>
