--- a/functions/common/tensorflow-common/pom.xml
+++ b/functions/common/tensorflow-common/pom.xml
@@ -2,20 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-	<artifactId>tensorflow-common</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>tensorflow-common</name>
-	<description>tensorflow common</description>
+	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../spring-functions-parent</relativePath>
+		<artifactId>java-functions-common-parent</artifactId>
+		<version>${revision}</version>
 	</parent>
 
-	<modelVersion>4.0.0</modelVersion>
+	<artifactId>tensorflow-common</artifactId>
+	<name>tensorflow-common</name>
+	<description>tensorflow common</description>
 
 	<properties>
 		<checkstyle.skip>true</checkstyle.skip>
