--- a/functions/consumer/analytics-consumer/pom.xml
+++ b/functions/consumer/analytics-consumer/pom.xml
@@ -3,17 +3,16 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>analytics-consumer</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>analytics-consumer</name>
-	<description>Spring Native Consumer for computing meters</description>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../spring-functions-parent</relativePath>
+		<artifactId>java-functions-consumer-parent</artifactId>
+		<version>${revision}</version>
 	</parent>
+
+	<artifactId>analytics-consumer</artifactId>
+	<name>analytics-consumer</name>
+	<description>Spring Native Consumer for computing meters</description>
 
 	<dependencies>
 		<dependency>
@@ -24,7 +23,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>config-common</artifactId>
-			<version>${spring-cloud-fn.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
