--- a/functions/consumer/cassandra-consumer/pom.xml
+++ b/functions/consumer/cassandra-consumer/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>cassandra-consumer</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>cassandra-consumer</name>
-	<description>Cassandra Consumer</description>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../spring-functions-parent</relativePath>
+		<artifactId>java-functions-consumer-parent</artifactId>
+		<version>${revision}</version>
 	</parent>
+
+	<artifactId>cassandra-consumer</artifactId>
+	<name>cassandra-consumer</name>
+	<description>Cassandra Consumer</description>
 
 	<properties>
 		<springIntegrationCassandara.version>0.8.0.RELEASE</springIntegrationCassandara.version>
