--- a/functions/consumer/geode-consumer/pom.xml
+++ b/functions/consumer/geode-consumer/pom.xml
@@ -2,62 +2,39 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>geode-consumer</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>geode-consumer</name>
-    <description>Geode consumer</description>
 
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
-        <artifactId>spring-functions-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../spring-functions-parent</relativePath>
+        <artifactId>java-functions-consumer-parent</artifactId>
+        <version>${revision}</version>
     </parent>
 
+    <artifactId>geode-consumer</artifactId>
+    <name>geode-consumer</name>
+    <description>Geode consumer</description>
+
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-gemfire</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>geode-common</artifactId>
-            <version>${spring-cloud-fn.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>config-common</artifactId>
-            <version>${spring-cloud-fn.version}</version>
+            <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>function-test-support</artifactId>
-            <version>${spring-cloud-fn.version}</version>
+            <version>${revision}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -65,6 +42,7 @@
             <artifactId>lombok</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 </project>
