--- a/functions/consumer/log-consumer/pom.xml
+++ b/functions/consumer/log-consumer/pom.xml
@@ -2,23 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>log-consumer</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>log-consumer</name>
-	<description>Log Consumer</description>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../spring-functions-parent</relativePath>
+		<artifactId>java-functions-consumer-parent</artifactId>
+		<version>${revision}</version>
 	</parent>
+
+	<artifactId>log-consumer</artifactId>
+	<name>log-consumer</name>
+	<description>Log Consumer</description>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>payload-converter-function</artifactId>
-			<version>${project.version}</version>
+			<version>${revision}</version>
 		</dependency>
 
 		<dependency>
