--- a/functions/function/header-enricher-function/pom.xml
+++ b/functions/function/header-enricher-function/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>header-enricher-function</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>header-enricher-function</name>
-    <description>Spring Native Function for applying message header enrichment</description>
 
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
-        <artifactId>spring-functions-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../spring-functions-parent</relativePath>
+        <artifactId>java-functions-function-parent</artifactId>
+        <version>${revision}</version>
     </parent>
+
+    <artifactId>header-enricher-function</artifactId>
+    <name>header-enricher-function</name>
+    <description>Spring Native Function for applying message header enrichment</description>
 
     <dependencies>
         <dependency>
