--- a/functions/function/image-recognition-function/pom.xml
+++ b/functions/function/image-recognition-function/pom.xml
@@ -2,31 +2,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>image-recognition-function</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>image-recognition-function</name>
-	<description>Spring Native Function for Tensorflow Integration</description>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../spring-functions-parent</relativePath>
+		<artifactId>java-functions-function-parent</artifactId>
+		<version>${revision}</version>
 	</parent>
+
+	<artifactId>image-recognition-function</artifactId>
+	<name>image-recognition-function</name>
+	<description>Spring Native Function for Tensorflow Integration</description>
 
 	<properties>
 		<commons-io.version>1.3.2</commons-io.version>
 	</properties>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>tensorflow-common</artifactId>
-			<version>${spring-cloud-fn.version}</version>
+			<version>${project.version}</version>
 		</dependency>
+
 	</dependencies>
 
 	<repositories>
+
 		<repository>
 			<id>tensorflow-snapshots</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
@@ -34,5 +36,7 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+
 	</repositories>
+
 </project>
