--- a/functions/function/object-detection-function/pom.xml
+++ b/functions/function/object-detection-function/pom.xml
@@ -2,30 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>object-detection-function</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>object-detection-function</name>
-	<description>Spring Native Function for Tensorflow Integration</description>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../spring-functions-parent</relativePath>
+		<artifactId>java-functions-function-parent</artifactId>
+		<version>${revision}</version>
 	</parent>
 
+	<artifactId>object-detection-function</artifactId>
+	<name>object-detection-function</name>
+	<description>Spring Native Function for Tensorflow Integration</description>
+
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>tensorflow-common</artifactId>
-			<version>${spring-cloud-fn.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.tensorflow</groupId>-->
-<!--			<artifactId>tensorflow-hadoop</artifactId>-->
-<!--			<version>1.15.0</version>-->
-<!--		</dependency>-->
 	</dependencies>
 
 	<build>
