--- a/functions/function/spel-function/pom.xml
+++ b/functions/function/spel-function/pom.xml
@@ -2,45 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>spel-function</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>spel-function</name>
-	<description>Spring Native Function for applying SpEL expressions</description>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../spring-functions-parent</relativePath>
+		<artifactId>java-functions-function-parent</artifactId>
+		<version>${revision}</version>
 	</parent>
 
+	<artifactId>spel-function</artifactId>
+	<name>spel-function</name>
+	<description>Spring Native Function for applying SpEL expressions</description>
+
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>payload-converter-function</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-integration</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-configuration-processor</artifactId>
-			<scope>provided</scope>
-		</dependency>
 	</dependencies>
 
 </project>
