--- a/functions/function/task-launch-request-function/pom.xml
+++ b/functions/function/task-launch-request-function/pom.xml
@@ -2,14 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../spring-functions-parent</relativePath>
+		<artifactId>java-functions-function-parent</artifactId>
+		<version>${revision}</version>
 	</parent>
-
-	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>task-launch-request-function</artifactId>
 	<name>task-launch-request-function</name>
