--- a/functions/function/tasklauncher-function/pom.xml
+++ b/functions/function/tasklauncher-function/pom.xml
@@ -2,28 +2,23 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>tasklauncher-function</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>tasklauncher-function</name>
-    <description>Spring Native Function for applying filter SpEL expressions</description>
 
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
-        <artifactId>spring-functions-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../spring-functions-parent</relativePath>
+        <artifactId>java-functions-function-parent</artifactId>
+        <version>${revision}</version>
     </parent>
+
+    <artifactId>tasklauncher-function</artifactId>
+    <name>tasklauncher-function</name>
+    <description>Spring Native Function for applying filter SpEL expressions</description>
 
     <properties>
         <spring.cloud.dataflow.version>2.5.1.RELEASE</spring.cloud.dataflow.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <scope>provided</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-dataflow-rest-client</artifactId>
@@ -39,17 +34,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+
     </dependencies>
 
 </project>
