--- a/functions/supplier/http-supplier/pom.xml
+++ b/functions/supplier/http-supplier/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>http-supplier</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>http-supplier</name>
-    <description>HTTP Supplier</description>
 
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
-        <artifactId>spring-functions-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../spring-functions-parent</relativePath>
+        <artifactId>java-functions-supplier-parent</artifactId>
+        <version>${revision}</version>
     </parent>
+
+    <artifactId>http-supplier</artifactId>
+    <name>http-supplier</name>
+    <description>HTTP Supplier</description>
 
     <dependencies>
         <dependency>
